<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HWA Selector</string>
    <string name="action_save">Save</string>
    <string name="action_selall">Select All</string>
    <string name="action_about">About</string>
    <string name="app_about">HWA Selector\nFor Defy and Defy+ CM9 ROMS. This app is created by\nJoji Augustine.\nXDA username : jojimail</string>
    <string name="action_backup">Create Backup</string>
    <string name="action_restore">Restore Backup</string>

</resources>